# send_datas_mqtt

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-influxDBui.yaml  docker-compose.yml  jsonl_to_parquet.py  pyproject.toml  sensor_data_to_parquet.py
.github/workflows/: execute-test.yml
bdd/migrations/: V1__create_table_type_metal.sql  V2__create_table_type_machine.sql  V3__create_table_production_status.sql  V4__create_table_nominale_values.sql  V4__create_table_regime_cadence.sql  V5__create_table_type_alerte.sql  V6__create_table_type_maintenance.sql  V7__create_table_age_machine.sql  V8__create_table_machine.sql  (+1 more)
bronze/: Generation_donnees.ipynb
erpnext/: README.md  erpnext_client_example.py
gold/: gold_datas.ipynb
grafana/dashboards/: failure-rate.json  (+3 more)
http/: README.md  influxdb.http
silver/: generate_clean_data.ipynb
src/: load_alerte.py  load_maintenance.py  load_nominal_values.py  mqtt_live_monitor.py  mqtt_send.ipynb  mqtt_send.py  parquet_flush.py
telegraf/: telegraf.conf
tests/: test_attach_alerte_maintenance_ids.py  test_build_episode_dataframes.py  test_build_machine_age_dataframe.py  test_build_machine_dataframe.py  test_correlate_sensor_alerte.py  test_create_table_with_id_and_unique_label.py  test_load_alerte.py  test_load_maintenance.py  test_load_nominal_values.py  test_parquet_flush.py  test_record_future_send_in_jsonl.py  test_remove_rows_containing_string_in_column.py  test_rename_columns_of_dataframe.py  test_sort_dataframe_by_timestamp.py  test_split_dataframe_by_prefix.py  test_zz_deliberately_failing.py
(+43 files in other folders)
