[project]
name = "send-datas-mqtt"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.23.10",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "marimo>=0.23.10",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
