[project]
name = "send-datas-mqtt"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "influxdb3-python>=0.15.0",
    "jupyter>=1.1.1",
    "marimo>=0.23.10",
    "numpy>=2.2.6",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "marimo>=0.23.10",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
